--- a/src/global.scss
+++ b/src/global.scss
@@ -2,6 +2,6 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'IBM Plex Sans', sans-serif;
-  --yellow: #F3AC1F;
+  --blue: #069A8E;
   --grey: #D1D1D1;
 }
