Feat: Start home development, divide the page in two sides

--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -8,7 +8,7 @@
   background-color: var(--blue);
   border-radius: 2rem;
   position: fixed;
-  left: 2rem;
+  right: 2rem;
   top: 20%;
 
   .link-list {
