Feat: Create content for both sides

--- a/src/global.scss
+++ b/src/global.scss
@@ -2,6 +2,10 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'IBM Plex Sans', sans-serif;
+  color: #1a1a1a;
+  --dark-blue: #005555;
+  --light-blue: #A1E3D8;
   --blue: #069A8E;
   --grey: #D1D1D1;
+  --yellow: #F7FF93;
 }
