--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -23,7 +23,7 @@
     li {
       list-style: none;
       transition: .5s;
-      font-size: 1.5rem;
+      font-size: 130%;
       
       .pages-link {
         text-decoration: none;
