--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -12,6 +12,88 @@
   .left-container {
     height: 100vh;
     background-color: #FFF;
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    margin: auto 1rem;
+
+    div {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: center;
+      margin: .75rem 0;
+      width: 100%;
+
+      h1 {
+        margin: 0;
+        font-size: 4rem;
+      }
+
+      span {
+        color: var(--blue);
+        overflow: hidden;
+        white-space: nowrap;
+        border-right: .25rem solid var(--yellow);
+        animation: typing 4s steps(40) 1s 1 normal both,
+        blink .5s step-end infinite alternate;
+      }
+      
+      @keyframes typing {
+        from { width: 0 }
+        to { width: 15rem }
+      }
+          
+      @keyframes blink {
+        50% {
+          border-color: transparent
+        }
+      }
+
+      h2 {
+        font-size: 1.5rem;
+      }
+  
+      h3 {
+        font-size: 1rem;
+        background-color: var(--blue);
+        padding: .5rem 2rem;
+        border-radius: 2rem 0 2rem 0;
+        width: 90%;
+        color: #FFF;
+
+        
+      }
+    }
+
+    p {
+      line-height: 1.5rem;
+      margin: .75rem 0;
+      a {
+        text-decoration: none;
+      }
+    }
+
+    button {
+      background-color: var(--blue);
+      border: 0;
+      padding: .5rem;
+      width: 30%;
+      height: 8%;
+      border-radius: 2rem;
+      font-weight: 700;
+      margin: .75rem 0;
+      transition: .75s;
+      color: #FFF;
+
+      &:hover {
+        cursor: pointer;
+        background-color: var(--dark-blue);
+        transition: .75s;
+      }
+    }
   }
 
   .right-container {
