--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -11,13 +11,14 @@
 
   .left-container {
     height: 100vh;
-    background-color: #FFF;
+    background-color: var(--light-grey);
     width: auto;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    margin: auto 1rem;
+    margin: 0;
+    padding: 0 1.5rem;
 
     div {
       display: flex;
@@ -123,8 +124,8 @@
       }
 
       button {
-        background-color: #FFF;
-        border: .25rem solid var(--blue);
+        background-color: var(--light-grey);
+        border: .15rem solid var(--blue);
         padding: .5rem;
         width: 100%;
         height: 80%;
