--- a/src/pages/About/style.scss
+++ b/src/pages/About/style.scss
@@ -10,15 +10,24 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 1px solid red;
     margin: 0;
-    padding: 0 3rem;
+    padding: 1.25rem 3rem;
     width: 90%;
 
     h1 {
       margin: 0;
       font-size: 4rem;
       align-self: center;
+    }
+
+    a {
+      text-decoration: none;
+      color: var(--blue);
+      font-weight: 700;
+
+      &:hover {
+        color: var(--blue);
+      }
     }
 
     span {
@@ -46,11 +55,13 @@
         align-self: center;
       }
 
-      div {
+      ul {
         display: flex;
         justify-content: center;
         align-items: center;
+        align-self: center;
         flex-wrap: wrap;
+        width: 150%;
 
         .technology-card {
           display: flex;
@@ -61,12 +72,19 @@
           height: 5rem;
           border: 1px solid var(--blue);
           border-radius: 1rem;
-          margin: 1rem;
+          margin: 0 1rem;
+          transition: .5s;
+
+          a {
+            text-decoration: none;
+          }
 
           &:hover {
             transition: .5s;
             cursor: pointer;
             color: var(--light-blue);
+            border: 1px solid var(--dark-blue);
+            transform: scale(1.05);
           }
 
           svg {
