--- a/src/pages/About/style.scss
+++ b/src/pages/About/style.scss
@@ -5,6 +5,9 @@
   height: 100vh;
   overflow: hidden;
   z-index: 5;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
   main {
     display: flex;
@@ -16,7 +19,7 @@
     width: 90%;
 
     h1 {
-      margin: 0;
+      margin: 2rem 0;
       font-size: 4rem;
       align-self: center;
     }
