Feat: Create a back and forward links

--- a/src/pages/About/style.scss
+++ b/src/pages/About/style.scss
@@ -18,6 +18,20 @@
     padding: 1.25rem 3rem;
     width: 90%;
 
+    .link-to {
+      position: fixed;
+      bottom: 5rem;
+      right: 32rem;
+      transition: .5s;
+      svg {
+        font-size: 3rem;
+      }
+      &:hover {
+        transition: .5s;
+        opacity: 0.9;
+      }
+    }
+
     h1 {
       margin: 2rem 0;
       font-size: 4rem;
