--- a/src/pages/Experiences/style.scss
+++ b/src/pages/Experiences/style.scss
@@ -10,6 +10,34 @@
   justify-content: center;
   align-items: center;
 
+  .link-to {
+    position: fixed;
+    bottom: 5rem;
+    right: 32rem;
+    transition: .5s;
+    svg {
+      font-size: 3rem;
+    }
+    &:hover {
+      transition: .5s;
+      opacity: 0.9;
+    }
+  }
+
+  .link-back {
+    position: fixed;
+    bottom: 5rem;
+    left: 28rem;
+    transition: .5s;
+    svg {
+      font-size: 3rem;
+    }
+    &:hover {
+      transition: .5s;
+      opacity: 0.9;
+    }
+  }
+
   h1 {
     margin: 2rem 0;
     font-size: 4rem;
