--- a/src/components/BackgroundPage/style.scss
+++ b/src/components/BackgroundPage/style.scss
@@ -1,4 +1,4 @@
-.about-background {
+.background {
   position: fixed;
   cursor: default;
   opacity: 0.55;
@@ -6,21 +6,21 @@
   user-select: none;
 }
 
-#about-background-top-right {
+#background-top-right {
   right: 0;
   top: -2rem;
   color: var(--grey);
   font-size: 6rem;
 }
 
-#about-background-top-left {
+#background-top-left {
   left: 0;
   top: 6rem;
   border: 1px solid var(--grey);
   width: 30%;
 }
 
-#about-background-bottom-left {
+#background-bottom-left {
   left: 1rem;
   bottom: -1rem;
   color: var(--grey);
