--- a/src/pages/Contact/style.scss
+++ b/src/pages/Contact/style.scss
@@ -37,7 +37,8 @@
       margin: 0;
       border-radius: 2rem 0 0 2rem;
       height: 100%;
-      background-color: var(--light-blue);
+      background-color: var(--blue);
+      color: #FFF;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -55,69 +56,20 @@
       }
     }
 
-    form {
+    .contact-links {
       display: flex;
-      flex-direction: column;
+      justify-content: space-around;
       align-items: center;
-      justify-content: center;
       width: 100%;
-      padding: 1.25rem;
-      background-color: var(--blue);
-      color: #FFF;
-      border-radius: 0 2rem 2rem 0;
-
-      button {
-        background-color: var(--light-blue);
-        border: 0;
-        align-self: flex-end;
-        padding: .5rem;
-        width: 20%;
-        height: 3rem;
-        border-radius: 2rem;
-        font-weight: 700;
-        font-size: 1rem;
-        margin: .75rem 1.25rem;
-        padding: 0 1rem;
-        transition: .75s;
-        color: #1a1a1a;
-
-        svg {
-          font-size: 1.5rem;
-        }
-
+      height: 5rem;
+      svg {
+        font-size: 3.5rem;
+        transition: .5s;
+        color: var(--dark-blue);
         &:hover {
-          cursor: pointer;
-          opacity: 0.8;
-          transition: .75s;
+          color: var(--blue);
+          transition: .5s;
         }
-      }
-
-      div {
-        display: grid;
-        width: 100%;
-        grid-template-columns: 1fr 1fr;
-      }
-
-      label {
-        margin: 0;
-        padding: 0;
-        font-weight: 700;
-        font-size: 1.25rem;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
-
-        input {
-          width: 90%;
-          margin: 1rem;
-          border: 0;
-          height: 3rem;
-          border-radius: .75rem;
-          font-size: 1.25rem;
-        }
-
       }
     }
   }
