--- a/src/pages/Contact/style.scss
+++ b/src/pages/Contact/style.scss
@@ -39,6 +39,35 @@
       flex-direction: column;
       justify-content: center;
       padding: 0 1.25rem;
+      color: var(--blue);
+      opacity: 0.9;
+
+      .title-contact {
+        font-size: 2rem;
+        color: #1a1a1a;
+        opacity: 0.85;
+      }
+
+      .contact-links {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        width: 100%;
+        height: 5rem;
+
+        svg {
+          font-size: 2rem;
+          transition: .5s;
+          margin: 0 1rem;
+          color: #1a1a1a;
+          opacity: 0.85;
+          &:hover {
+            transition: .5s;
+            padding-bottom: .5rem;
+          }
+        }
+      }
+
       h2 {
         font-size: 1.5rem;
         display: flex;
@@ -47,6 +76,8 @@
         width: 25rem;
         svg {
           margin: 0 1rem 0 0;
+          color: #1a1a1a;
+          opacity: 0.85;
         }
       }
     }
@@ -108,6 +139,7 @@
           height: 3rem;
           border-radius: .75rem;
           font-size: 1.25rem;
+          opacity: 0.9;
         }
       }
     }
