--- a/src/pages/Projects/style.scss
+++ b/src/pages/Projects/style.scss
@@ -10,8 +10,8 @@
   background-color: var(--light-grey);
 
   h1 {
-    margin: 2rem 0;
-    font-size: 4rem;
+    margin: 2rem 0 0 0;
+    font-size: 3.5rem;
     align-self: center;
   }
 
@@ -27,22 +27,21 @@
 
   .projects-list {
     display: flex;
+    z-index: 3;
+    padding: 0;
+    margin: 0;
 
     section {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
-      width: 20rem;
-      height: 30rem;
-      margin: 2rem;
+      width: 15rem;
+      height: 25rem;
+      margin: 1rem 2rem;
       border-radius: 1rem;
       transition: .5s;
       box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-
-      h2 {
-        color: var(--dark-blue);
-      }
 
       &:hover {
         box-shadow: rgba(99, 99, 99, 0.363) 0px 2px 8px 0px;
@@ -52,7 +51,7 @@
       img {
         border-radius: 1rem 1rem 0 0;
         width: 100%;
-        height: 15rem;
+        height: 40%;
         margin: 0;
         padding: 0;
       }
@@ -63,7 +62,7 @@
         align-items: flex-start;
         justify-content: flex-start;
         width: 100%;
-        height: 15rem;
+        height: 60%;
         border-radius: 0 0 1rem 1rem;
         margin: 0;
         opacity: 0.9;
@@ -72,21 +71,30 @@
           margin: 0 .5rem;
         }
 
+        .name-project {
+          color: var(--dark-blue);
+          font-size: 1.5rem;
+        }
+
         .a-container {
           display: grid;
           grid-template-columns: 1fr 1fr;
           align-items: center;
+          justify-content: center;
+          padding: 0 .5rem;
           width: 100%;
-          margin: .25rem;
 
           a {
-            margin: .25rem;
             display: flex;
+            flex-direction: row;
+            justify-content: center;
             border-radius: 2rem;
             font-weight: 700;
-            width: 9rem;
-            height: 3rem;
-            justify-content: space-around;
+            font-size: .8rem;
+            padding: 0 .5rem;
+            width: fit-content;
+            height: 30%;
+            min-height: fit-content;
             align-items: center;
             transition: .5s;
             background-color: var(--blue);
